--- a/conf/local.php.dist
+++ b/conf/local.php.dist
@@ -11,6 +11,6 @@
 
 //$conf['title']       = 'My Wiki';        //what to show in the title
 
-//$conf['useacl']      = 1;                //Use Access Control Lists to restrict access?
+$conf['useacl']      = 1;                //Use Access Control Lists to restrict access?
 //$conf['superuser']   = 'joe';
 
